# rollupx-full-zk-rollup

./: .dockerignore  .gitignore  ARCHITECTURE_PACK.md  BENCHMARK_GUIDE.md  BENCHMARK_PLAN_IMPLEMENTATION_GUIDE.md  BENCHMARK_RESULTS_ANALYSIS.md  COMPLETE_ROADMAP.md  CONTAINERIZATION_PLAN.md  DELIVERABLES_SUMMARY.md  EXECUTOR_PROVER_TEST_PLAN.md  FACTORIAL_EXPERIMENT_DESIGN.md  QUICK_REFERENCE.md  README.md  README_TESTING.md  README_architecture.md  RUN_GUIDE.md  STAGE1_BENCHMARK_ANALYSIS.md  STAGE2_BENCHMARK_ANALYSIS.md  STAGE3_BENCHMARK_ANALYSIS.md  STAGE4_BENCHMARK_ANALYSIS.md  STAGE5_BENCHMARK_ANALYSIS.md  TEST_EXECUTION_GUIDE.md  USAGE.md  adaptive_batching_and_blob_aware_scheduling_md.md  benchmark_plan.md  benchmarkfix.md  docker-compose.yml  hardhadfix.md  rollupx_benchmarking_plan.md  run_pipeline.sh  run_verification_tests.sh
.github/workflows/: docker-smoke.yml
Zk-Prover/rollup-prover/: Readme.md
benchmark-suite/: Dockerfile  PLAN.md  README.md  poisson_generator.py  rollupx_workload_generation_methodology.md
benchmark-suite/config/: experiments.toml  sequencer.template.toml
benchmark-suite/metrics/: run_status.json  tx_log_exp_1775638092_r00.csv  workload_exp_1775638092.json
benchmark-suite/scratch/: analyze_s3.py  analyze_s4.py
benchmark-suite/scripts/: analyze_blob_scheduler_effectiveness.py  analyze_cost_curve.py  collect_env.sh  generate_analysis_report.py  generate_plan_artifacts.sh  plot_all_stages.py  plot_plan_stages.py  plot_report_graphs.py  reset_state.sh  run_cost_curve_quick.sh  run_experiment.sh  run_feasibility_batchsize.sh  run_feasibility_lite_batchsize.sh  run_matrix.sh  run_model_quality_batchsize.sh  run_plan_benchmark.py  run_plan_benchmark.sh  run_smoke_batchsize.sh  wait_for_sequencer.sh
benchmark-suite/workload/: poisson_generator.py  tx_types.py
compose/scripts/: deploy-runtime.sh
contracts/: .dockerignore  .env.example  .gitignore  AGENTS.md  BEST_PRACTICES.md  Dockerfile  Dockerfile.node  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/.github/: CODEOWNERS  dependabot.yml
contracts/contracts/: MockVerifier.sol  RealVerifier.sol  ZKRollupBridge.sol
contracts/docs/: API.md  ARCHITECTURE.md  INTEGRATION.md
contracts/scripts/: decode-error.ts  deploy-local.ts  deploy-test-net.ts  deploy_baseline_temp.ts  export-abis.ts  generate-mock-batch.ts  tmp_setup_da.js  verify-runtime.ts  verify-state.ts
contracts/test/: BridgeDepositWithdrawal.ts  ExodusMode.ts  FullCoverage.ts  LocalRuntimeDA.ts  OptimisticMode.t.sol  RealVerifier.test.ts  RedTeam_BlobDA.ts  RedTeam_Censorship.ts  ZKRollupBridge.t.sol  ZKRollupBridge.test.ts  bridge.calldata.test.ts
data-tools/: Dockerfile  LICENSE  README.md  aggregate.py  config.py  data-tools.yaml  pareto.py  rollupx_data_tools_methodology.md  stats.py
data-tools/plots/: batch_feasibility.py  cost_heatmap.py  fairness.py  final_report_graphs.py  latency_boxplot.py  latency_cdf.py  pareto_frontier.py  sensitivity.py  throughput_bar.py
data-tools/report/: generate_md.py
data-tools/tests/: test_aggregate.py
docs/: benchmark-design.md  benchmarking.md  contracts.md  data-tools.md  e2e-flow.md  executor.md  metrics-collection-design.md  paper-benchmark-data.md  prover.md  research-system-design.md  runtime-integration.md  scientific-validity-review.md  sequencer.md  submitter.md  system-overview.md  ui.md  workload-generator.md
executor/: .gitignore  Cargo.toml  Dockerfile  README.md  SYSTEM_DESIGN.md  all_workspace_deps.toml  docker-entrypoint.sh  executor.docker.yaml  run_executor.py  workspace_deps.toml
executor/lib/object_store/: Cargo.toml
executor/lib/object_store/src/: factory.rs  lib.rs  mirror.rs
executor/lib/operator_signer/: Cargo.toml
executor/lib/operator_signer/src/: lib.rs
executor/risc0_prover/: Cargo.toml
executor/scripts/: executor_ctl.sh
executor/src/: Cargo.toml  block_constructor.rs  bridge.rs  build.rs  executor.rs  grpc.rs  lib.rs  main.rs  merkle.rs  proof.rs  proto.rs  service.rs  state.rs  tests_research.rs  trace.rs  tx_engine.rs  types.rs
executor/src/tests/: test_integration.rs  test_state.rs  test_trace.rs  test_tx_engine.rs
executor/state_machine/: Cargo.toml
executor/state_machine/src/: executor.rs  lib.rs  tree.rs  types.rs
executor/tests/: test_integration.rs  test_research_validity.rs  test_state.rs  test_trace.rs  test_tx_engine.rs
latex/: authors.tex  cover.tex  macros.tex  main.aux  main.bbl  main.blg  main.tex  mercon_main.aux  mercon_main.bbl  mercon_main.blg  poster_image_upscale_report.md  poster_upscale_used_images.py  refs.bib
latex/algorithms/: algorithm1.tex
latex/chapters/: 1-introduction.tex  2-literature_review.tex  3-proposed_method.tex  4-research_methodology.tex  5-implementation_progress.tex  6-research_timeline.tex  7-feasibility_and_conclusion.tex  evaluation.tex  experiment.tex  progress_report_main.tex
latex/figures/: merkle tree.tex
latex/final_report/: final_report_main.tex  references.bib  test_compile.sh
latex/paper/: mercon_main.tex
latex/poster/: baposter.cls  beamercolorthemeuom.sty  beamerthemegemini.sty  custom.bib  main.aux  main.tex  main2.tex  poster_main.tex
latex/proposal1/: authors.tex  cover.tex  main.tex  refs.bib
latex/proposal2/: cover.tex  main.tex  refs.bib
latex/tables/: Configurability.tex  Indicative_scale_compariso.tex  (+2 more)
proto/: rollup.proto
risc0_prover/: Cargo.toml  README.md
risc0_prover/host/: Cargo.toml
risc0_prover/host/guest/: Cargo.toml
risc0_prover/host/src/: main.rs
scratch/: proposal_text.txt
scripts/: generate_reports.sh  run_full_suite.sh  run_infra_matrix.sh  run_workload_matrix.sh  smoke_benchmark.sh  verify_artifacts.sh  verify_stack.sh
sequencer/: Cargo.toml  Dockerfile  README.md  architecture.mmd  build.rs  docker-entrypoint.sh  sequencer.docker.yaml  sequencer.yaml  test.mmd  test_parse.rs
submitter/: Cargo.toml  Dockerfile  README.md  build.rs  check_out.txt  patch_calldata.py  patch_da.py  patch_real.py  patch_simulated.py  submitter.docker.yaml
zk-rollup-ui/: README.md
(+907 files in other folders)
