[package]
name = "zksync_state_machine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "zksync_state_machine"
path = "main.rs"

[dependencies]
anyhow.workspace = true
ethers = "2.0"
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { workspace = true, features = ["transport", "codegen", "prost"] }
prost.workspace = true
futures-util.workspace = true
tracing.workspace = true

zksync_contracts.workspace = true
zksync_crypto_primitives.workspace = true
zksync_merkle_tree.workspace = true
zksync_multivm.workspace = true
zksync_prover_interface.workspace = true
zksync_system_constants.workspace = true
zksync_types.workspace = true
zksync_vm_interface.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
tonic-build = "0.11.0"
protoc-bin-vendored = "3"
