[package]
name = "zksync_state_machine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_types.workspace = true
zksync_multivm.workspace = true
zksync_vm_interface = { path = "../lib/vm_interface" }
zksync_crypto_primitives = { path = "../lib/crypto_primitives" }
zksync_state.workspace = true
zksync_contracts.workspace = true
zksync_utils.workspace = true
zksync_merkle_tree.workspace = true
zksync_mini_merkle_tree.workspace = true
zksync_storage.workspace = true
zksync_dal.workspace = true
zksync_system_constants.workspace = true
zksync_prover_interface.workspace = true

anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
zksync_test_contracts.workspace = true
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
