[package]
name = "rollup_host"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = "1.2.6"

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
anyhow = "1"
risc0-zkvm = "1"
rollup_core = { path = "../rollup_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
