[package]
name = "zksync_object_store"
description = "ZKsync implementation of object stores"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["local"]
local = []
aws-s3 = [
  "dep:aws-config",
  "dep:aws-runtime",
  "dep:aws-sdk-s3",
]
gcs = [
  "dep:google-cloud-auth",
  "dep:google-cloud-storage",
]
node_framework = ["dep:zksync_node_framework"]

[dependencies]
vise.workspace = true
zksync_config.workspace = true
zksync_node_framework = { workspace = true, optional = true }
zksync_types = { workspace = true, features = ["protobuf"] }
zksync_protobuf.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
google-cloud-storage = { workspace = true, optional = true }
google-cloud-auth = { workspace = true, optional = true }
http.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
prost.workspace = true
reqwest.workspace = true
aws-config = { workspace = true, optional = true }
aws-runtime = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
tempfile.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
smart-config.workspace = true
