[package]
name = "zksync_operator_signer"
description = "ZKsync operator signer abstraction supporting local keys and GCP KMS"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
gcp-kms = [
  "dep:alloy-primitives",
  "dep:alloy-signer",
  "dep:alloy-signer-gcp",
  "dep:gcloud-sdk",
]

[dependencies]
zksync_basic_types.workspace = true
zksync_config.workspace = true
zksync_crypto_primitives.workspace = true
zksync_eth_signer.workspace = true

alloy-primitives = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-gcp = { workspace = true, optional = true }
gcloud-sdk = { workspace = true, optional = true }
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
